--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@capacitor/core": "^7.4.3",
     "@capacitor/ios": "^7.4.3",
     "@supabase/supabase-js": "^2.57.4",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "framer-motion": "^12.23.16",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.2",
     "uuid": "^9.0.1"
   },
